update web-chat-scotland html

--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -22,15 +22,10 @@
             </div>
         </div>
         <div class="govuk-details__text">
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.titleScotland | safe }}</h2>
-            <div id="antenna-web-chat-scotland" >
-                <div id="antenna-web-chat-link-scotland">
-                    <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.desc | safe }}</p>
-                    {{ webChatModal() }}
-                </div>
-                <div id="antenna-web-chat-closed-scotland" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textChatClosed | safe }}</div>
-                <div id="antenna-web-chat-busy-scotland" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textAllAgentsBusy | safe }}</div>
-                <div id="antenna-web-chat-no-agents-scotland" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textNoAgentsAvailable | safe }}</div>
+            <div id="web-chat-scotland" >
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.titleScotland | safe }}</h2>
+                <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.desc | safe }}</p>
+                {{ webChatModal() }}
             </div>
         </div>
     {% endif %}
