Add dynatrace snippet

--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -30,6 +30,12 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <noscript> <img alt="no javascript" src="/assets/images/noJS.png" width="1" height="1" /></noscript>
+
+
+  <!-- Dynatrace manual injection snippet (noscript) -->
+  <script type="text/javascript" src="https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/5757482cea762c9_complete.js" crossorigin="anonymous"></script>
+  <!-- End Dynatrace manual injection snippet (noscript) -->
+
 {% endblock %}
 
 {% block footer %}
