remove changes to web-chat.html

--- a/views/components/web-chat.html
+++ b/views/components/web-chat.html
@@ -1,5 +1,5 @@
-<link  href="https://webchat-client.ctsc.hmcts.net/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/styles.css" rel="stylesheet"/>
-<script src="https://webchat-client.ctsc.hmcts.net/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/app-es2015.js" type="module"></script>
+<link  href="https://{{ webChatClientUrl }}/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/styles.css" rel="stylesheet"/>
+<script src="https://{{ webChatClientUrl }}/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/app-es2015.js" type="module"></script>
 <script src="https://{{ webChatClientUrl }}/chat-client/{{ commonContent[htmlLang].contactUs.webchat.jsFile }}/app-es5.js" nomodule defer></script>
 
 <web-chat class="hidden"
