--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -20,6 +20,13 @@
                 <div id="antenna-web-chat-no-agents" style="display: none;">{{ commonContent[htmlLang].contactUs.webchat.textNoAgentsAvailable | safe }}</div>
             </div>
         </div>
+        <div class="govuk-details__text">
+            <div id="web-chat-scotland" >
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.titleScotland | safe }}</h2>
+                <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.webchat.desc | safe }}</p>
+                <div id="__8x8-chat-button-container-script_1553624711656480310cfd53.70557078"></div>
+            </div>
+        </div>
     {% endif %}
     {% if contactUsWebFormEnabled %}
         <div class="govuk-details__text">
