--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -19,6 +19,22 @@
     })(window,document,'script','dataLayer','GTM-T56C5T7');</script>
     <!-- End Google Tag Manager -->
 
+{% if environment === 'production' %}
+<script 
+    type="text/javascript" 
+    src="https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/16f5f964ab6c179f_complete.js" 
+    crossorigin="anonymous"
+    integrity="sha384-S3zjnvflO7BJA6DyU2XOAJ5ekINFsWwl4Nq1ooBVGdTwjmsIOtQ3b/O2rhRaTvrc"></script>
+{% else %}
+  <!-- Dynatrace manual injection snippet (noscript) -->
+  <script 
+      type="text/javascript" 
+      src="https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/5757482cea762c9_complete.js" 
+      crossorigin="anonymous"
+      integrity="sha384-omzYu1Sl/+IPhuNnm18ww9A1jOlB19wfJ8zO/7oc/1Sd7dHgDG3cpSDIrkfsa5/c"></script>
+  <!-- End Dynatrace manual injection snippet (noscript) -->
+{% endif %}
+
     <link href="{{ asset_path }}vendors~main.css" media="screen" rel="stylesheet" />
     <link href="{{ asset_path }}main.css" media="screen" rel="stylesheet" />
     <input id="asset-path" type="hidden" data-path="{{ asset_path }}">
