Changing to use global var in template

--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -38,7 +38,7 @@
         </div>
     {% endif %}
     {% if contactUsTelephoneEnabled %}
-      {% if isTypeIba %}
+      {% if isIba %}
         <div class="govuk-details__text">
           <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.title | safe }}</h2>
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.desc | safe }}</p>
